Fix overflow & scroll

--- a/src/styles/components/app-header.scss
+++ b/src/styles/components/app-header.scss
@@ -71,48 +71,50 @@
     display: flex;
 
     @media (max-width: 992px) {
-      position: fixed;
-      z-index: 9902;
-      right: 0;
-      top: 0;
-      flex-direction: column;
-      width: 70vw;
-      height: 100%;
-      align-items: center;
-      justify-content: center;
-      background: $pink;
-      transform: translate(100%, 0);
-      transition: transform .2s ease-in-out;
+      display: none;
+    }
+  }
 
-      a {
-        display: inline-block;
-        padding: 12px 0;
+  &__menu-mobile {
+    display: flex;
+    position: fixed;
+    z-index: 9902;
+    right: 0;
+    top: 0;
+    flex-direction: column;
+    width: 75vw;
+    height: 100%;
+    box-sizing: border-box;
+    align-items: center;
+    justify-content: center;
+    background: $pink;
+    transform: translate(100%, 0);
+    transition: transform .2s ease-in-out;
+
+    a {
+      display: inline-block;
+      padding: 12px 0;
+      color: #fff;
+
+      &:hover {
         color: #fff;
-
-        &:hover {
-          color: #fff;
-        }
       }
+    }
 
-      &.isOpen {
-        transform: translate(0, 0);
-      }
+    &.isOpen {
+      transform: translate(0, 0);
     }
   }
 
   &__menu-close {
-    display: none;
+    display: block;
+    position: absolute;
+    top: 42px;
+    right: 30px;
     cursor: pointer;
 
     path {
       stroke: #fff;
-    }
-
-    @media (max-width: 992px) {
-      display: block;
-      position: absolute;
-      top: 42px;
-      right: 30px;
     }
   }
 
@@ -146,6 +148,11 @@
 
     &.active {
       color: $pink;
+
+      @media (max-width: 992px) {
+        color: #fff;
+        opacity: .6;
+      }
     }
   }
 
@@ -166,10 +173,10 @@
     background: none;
     border: none;
     cursor: pointer;
-    width: 20px;
-    height: 20px;
-    margin-right: 12px;
-    transform: translate(-4px, -2px);
+    width: 30px;
+    height: 24px;
+    margin-right: 2px;
+    transform: translate(-4px, 0);
 
     &[disabled] {
       cursor: not-allowed;
@@ -208,7 +215,7 @@
 
     &.isOpen {
       z-index: 5;
-      height: 100px;
+      height: 90px;
       background: #fff;
       border-radius: 10px;
       padding: 0 40px;
@@ -270,7 +277,7 @@
       background: rgba(0,0,0,.12);
     }
 
-    &.menu {
+    &.menu-mobile {
       @media (min-width: 993px) {
         display: none !important;
       }
