--- a/src/styles/components/main-page.scss
+++ b/src/styles/components/main-page.scss
@@ -1,6 +1,7 @@
 .main-page {
   &__page-line {
     position: relative;
+    overflow-x: hidden;
   }
 
   &__page-line-icon {
@@ -142,6 +143,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: 100px;
+    width: 100%;
   }
 
   &__persons-image-wrap {
