--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -20,6 +20,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: #fff;
   color: $black;
+  width: 100vw;
   overflow-x: hidden;
 }
 
@@ -37,4 +38,10 @@ ul {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+#root {
+  width: 100vw;
+  height: 100%;
+  overflow-x: hidden;
 }
